--- a/loading.css
+++ b/loading.css
@@ -251,3 +251,35 @@ body{
         border-radius: var(--border_radius3) ;
     }
 }
+#algorithm {
+    color: #8e3a1e;
+    background-color: #ea7814;
+    font-weight: bold;
+    font-family: Verdana;
+    text-decoration: none;
+    font-size: medium;
+    position: absolute;
+    width: 100px;
+    height: 30px;
+    top: 5px;
+    left: 300px;
+    border: 4px solid #173867;
+    padding: 5px;
+    border-radius: 20px 20px 20px 20px;
+}
+#casual {
+    color: #8e3a1e;
+    background-color: #ea7814;
+    font-weight: bold;
+    font-family: Verdana;
+    text-decoration: none;
+    font-size: medium;
+    position: absolute;
+    width: 100px;
+    height: 30px;
+    top: 5px;
+    left: 450px;
+    border: 4px solid #173867;
+    padding: 5px;
+    border-radius: 20px 20px 20px 20px;
+}
