--- a/loading.css
+++ b/loading.css
@@ -283,3 +283,20 @@ body{
     padding: 5px;
     border-radius: 20px 20px 20px 20px;
 }
+// write a button at the right corner
+#button2{
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 100px;
+    height: 30px;
+    border: 4px solid #173867;
+    padding: 5px;
+    border-radius: 20px 20px 20px 20px;
+    background-color: #ea7814;
+    font-weight: bold;
+    font-family: Verdana;
+    text-decoration: none;
+    font-size: medium;
+    color: #8e3a1e;
+}
