brand new pages

--- a/loading.css
+++ b/loading.css
@@ -1,302 +1,28 @@
-body{
-    background-color: #f8f2ec;
-    display: flex;
-    justify-content: center;
-    margin-top: 200px;
-}
-.loader{
-    border: 16px solid rgb(214,079,056);
-    border-top: 16px solid rgb(118,162,185);
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    animation: spin 2s linear infinite;
-    box-shadow: 0px 0px 15px rgb(10, 18, 22);
-}
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100%{
-        transform: rotate(360deg);
-    }    
-}
-#video {
-    color: #4f48ae;
-    background-color: #92b539;
-    font-weight: bold;
-    font-family: Verdana;
+
+.button{
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
     text-decoration: none;
-    font-size: medium;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.button:hover {
+    background-color: #3e8e41;
+}
+.button-buttonmain{
+    /*write its place at the left corner*/
     position: absolute;
     top: 5px;
-    left: 10px;
-    border: 4px solid #92b539;
-    padding: 5px;
-    border-radius: 20px 20px 20px 20px;
+    left: 5px;
 }
-.cs61b_text {
-    --border_radius4:20px 20px 20px 20px/30px 30px 30px 30px;
-}
-#CS61B {
-    color: #93ae48;
-    background-color: #1d1fcc;
-    font-weight: bold;
-    font-family: Verdana;
-    text-decoration: none;
-    font-size: medium;
+/*write a sub button at the left corner*/
+.button-buttonsub{
     position: absolute;
     top: 5px;
-    left: 100px;
-    border: 4px solid #c1102d;
-    padding: 5px;
-    border-radius: 20px 20px 20px 20px;
-}
-.button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    box-sizing: border-box;
-    width: 280px;
-    height: 80px;
-
-    text-decoration: none;
-    border: solid 3px #000;
-    border-radius: 40px;
-    background: #f4cf47;
-}
-.button--bird {
-    --main_color: #f4cf47;
-}
-.button {
-    background : var(--main_color);
-}
-.button__wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: 100%;
-    height: 100%;
-}
-.button--bird {
-    --base_color: #000;
-}
-.button__text{
-    font-size: 32px;
-    letter-spacing: 4px;
-    color: var(--base_color);
-}
-.button::before{
-    content: '';
-   
-    position: absolute;
-    right: 20px;
-
-    margin: auto 0;
-    width: 24px;
-    height: 24px;
-  
-    background: var(--base_color);
-    clip-path: path('M24,12.02c0-1.09-.75-1.71-.81-1.77L11.17,.45c-.91-.74-2.21-.56-2.91,.42-.69,.97-.52,2.37,.39,3.11l7.12,5.81-13.7-.02h0C.93,9.77,0,10.76,0,11.99c0,1.23,.93,2.22,2.07,2.22l13.7,.02-7.13,5.78c-.91,.74-1.09,2.13-.4,3.11,.41,.58,1.03,.88,1.65,.88,.44,0,.88-.15,1.25-.45l12.04-9.76c.07-.06,.82-.67,.82-1.77Z');
-}
-.button {
-    position: relative;
-}
-.button--bird {
-    --sub_color1: #f4e19c;
-}
-.button--bird .button__wrapper::before,
-.button--bird .button__wrapper::after{
-    content: '';
-
-    position: absolute;
-    bottom: 0;
-
-    width: 130px;
-    height: 38px;
-
-    background: var(--sub_color1);
-
-    clip-path: path('M13.77,37.35L.25,16.6c-.87-1.33,.69-2.91,2-2.02l12.67,8.59c.81,.55,1.91,.14,2.18-.81l2.62-9.33c.39-1.4,2.34-1.42,2.76-.02l3.6,11.99c.33,1.11,1.74,1.4,2.47,.52L49.38,.52c.87-1.04,2.53-.42,2.53,.95V23.7c0,1.13,1.2,1.83,2.16,1.26l12.75-7.51c.85-.5,1.94,0,2.13,.98l1.5,7.6c.2,1.03,1.37,1.51,2.22,.92l17.74-12.3c1.09-.75,2.52,.25,2.21,1.55l-2.44,10.2c-.26,1.09,.74,2.06,1.8,1.75l30.8-9.04c1.37-.4,2.42,1.26,1.49,2.36l-9.07,10.66c-.83,.98-.1,2.49,1.17,2.42l12.12-.68c1.6-.09,2.12,2.15,.65,2.8l-2.73,1.21c-.18,.08-.38,.12-.58,.12H14.97c-.48,0-.93-.25-1.2-.65Z');
-}
-
-.button--bird .button__wrapper::before{
-    left: 0;
-}
-.button--bird .button__wrapper::after{
-    right: 0;
-    transform : rotateY(180deg) ;
-}
-.button__wrapper {
-    position: relative;
-}
-.button:hover .button__text{
-    letter-spacing : 6px ;
-}
-.button:hover .button__wrapper::before{
-    transform : translateX(-12px) ;
-}
-.button:hover .button__wrapper::after{
-    transform : rotateY(180deg) translateX(-12px) ;
-}
-.button:hover::before{
-    right : 14px ;
-}
-.button__bird {
-    --border_radius1: 60px 60px 40px 40px / 48px 48px 30px 30px ;
-}
-
-.birdBox {
-    position: absolute ;
-    top: -54px ;
-
-    display: flex ;
-    justify-content: space-between ;
-    align-items: flex-end ;
-
-    width: 180px ;
-    height: 56px ;
-}
-.bird{
-    width: 56px ;
-    height: 36px ;
-    box-sizing: border-box ;
-    border: solid 3px #000 ;
-    background: var(--main_color) ;
-    border-radius: var(--border_radius1) ;
-}
-.bird {
-    position: relative;
-}
-.bird::before{
-    content: '' ;
-   
-    position: absolute ;
-    top: -12px ;
-    left: 22px ;
-
-    width: 12px ;
-    height: 12px ;
-
-    background : #000 ;
-    clip-path : path('M10.23,3.32c-3.54,.63-5.72,2.51-7.02,4.23-.33-1.58-.34-3.54,.93-5.12,.52-.65,.41-1.59-.24-2.11C3.24-.19,2.29-.08,1.77,.57c-3.82,4.77-.31,11.11-.13,11.42,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0-.01-.02,2.49,.04,2.52,0,.1-.14,1.54-4.82,6.59-5.71,.82-.14,1.37-.92,1.22-1.74s-.94-1.36-1.75-1.21Z') ;
-}
-.button--bird{
-    --sub_color2: #ff8108 ;
-}
-.bird__face{
-    position: absolute ;
-    top: 15px ;
-    
-    width: 12px ;
-    height: 6px ;
-    
-    background: var(--sub_color2) ;
-    border-radius: 50% 50% 50% 50% / 78% 78% 22% 22% ;
-}
-.bird {
-    display: flex;
-    justify-content: center;
-}
-.bird__face::before,
-.bird__face::after{
-    content: '' ;
-    position: absolute ;
-    top: -4px ;
-    width: 8px ;
-
-    height: 2px ;
-    border-radius: 4px ;
-    background: #000 ;
-}
-.bird__face::before{
-    left: -5px ;
-}
-.bird__face::after{
-    right: -5px ;
-}
-
-.bird {
-   border-radius: var(--border_radius1) ;
-}
-.button:hover .wakeup{
-    animation: wakeup .2s ease ;
-}
-
-@keyframes wakeup{
-    0%  {
-        height : 32px;
-    }
-    100%{
-        height : 56px ;
-    }
-}
-.button:hover .wakeup{
-    animation : wakeup .2s ease ;
-    animation-fill-mode : forwards ;
-}
-.button--bird {
-    --border_radius2: 70px 70px 40px 40px / 48px 48px 30px 30px ;
-    --border_radius3: 40px 40px 40px 40px / 48px 48px 30px 30px ;
-}
-@keyframes wakeup{
-    0%  {
-        height: 32px;
-        border-radius: var(--border_radius2) ;
-    }
-    100%{
-        height: 56px ;
-        border-radius: var(--border_radius3) ;
-    }
-}
-#algorithm {
-    color: #8e3a1e;
-    background-color: #ea7814;
-    font-weight: bold;
-    font-family: Verdana;
-    text-decoration: none;
-    font-size: medium;
-    position: absolute;
-    width: 100px;
-    height: 30px;
-    top: 5px;
-    left: 300px;
-    border: 4px solid #173867;
-    padding: 5px;
-    border-radius: 20px 20px 20px 20px;
-}
-#casual {
-    color: #8e3a1e;
-    background-color: #ea7814;
-    font-weight: bold;
-    font-family: Verdana;
-    text-decoration: none;
-    font-size: medium;
-    position: absolute;
-    width: 100px;
-    height: 30px;
-    top: 5px;
-    left: 450px;
-    border: 4px solid #173867;
-    padding: 5px;
-    border-radius: 20px 20px 20px 20px;
-}
-// write a button at the right corner
-#button2{
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    width: 100px;
-    height: 30px;
-    border: 4px solid #173867;
-    padding: 5px;
-    border-radius: 20px 20px 20px 20px;
-    background-color: #ea7814;
-    font-weight: bold;
-    font-family: Verdana;
-    text-decoration: none;
-    font-size: medium;
-    color: #8e3a1e;
+    left: 150px;
 }
