--- a/loading.css
+++ b/loading.css
@@ -26,3 +26,27 @@
     top: 5px;
     left: 150px;
 }
+/*write a sub button at the left corner*/
+.button-buttonsub2{
+    position: absolute;
+    top: 5px;
+    left: 320px;
+}
+/*write a sub button at the left corner*/
+.button-buttonsub3{
+    position: absolute;
+    top: 5px;
+    left: 460px;
+}
+/*write a sub button at the left corner*/
+.button-buttonsub4{
+    position: absolute;
+    top: 5px;
+    left: 660px;
+}
+/*write a sub button at the left corner*/
+.button-buttonsub5{
+    position: absolute;
+    top: 5px;
+    left: 830px;
+}
