--- a/loading.css
+++ b/loading.css
@@ -50,3 +50,26 @@
     top: 5px;
     left: 830px;
 }
+/*get the form in the centre place*/
+.form{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 200px;
+    background: #fff;
+    padding: 40px;
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.5);
+    border-radius: 10px;
+}
+/*make the input look better*/
+.input{
+    width: 100%;
+    margin-bottom: 20px;
+    background-color: white;
+    background-size: 400%;
+    font-family: "montserrat";
+    animation: bganimation 15s infinite;
+}
