--- a/loading.css
+++ b/loading.css
@@ -54,6 +54,12 @@ body {
     top: 5px;
     left: 830px;
 }
+.button-buttonsub6{
+    position: absolute;
+    /*on the second row*/
+    top: 70px;
+    left: 5px;
+}
 /*get the form in the centre place*/
 .form{
     position: absolute;
