--- a/loading.css
+++ b/loading.css
@@ -60,6 +60,12 @@ body {
     top: 70px;
     left: 5px;
 }
+.button-buttonsub7{
+    position: absolute;
+    /*on the second row*/
+    top: 70px;
+    left: 150px;
+}
 /*get the form in the centre place*/
 .form{
     position: absolute;
@@ -95,4 +101,74 @@ body {
     border-radius: 10px;
     font-size: 18px;
     font-weight: 600;
+}
+.menu {
+    width: 2300px;
+    height: 50px;
+    padding: 20px 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 50px 0 0 50px;
+    position: relative;
+}
+
+.menu .item {
+    float: left;
+    height: 42px;
+    width: 80px;
+    /* border: 1px solid red; */
+    color: #fff;
+    font-size: 14px;
+    line-height: 42px;
+    padding-left: 40px;
+    cursor: pointer;
+}
+
+.menu .item:hover {
+    background-color: #ff6700;
+    background-image: url('images/right-jiantou2.png');
+}
+
+/* 右侧二级菜单 */
+.menu .item .nav {
+    min-width: 250px;
+    height: 460px;
+    background-color: #fff;
+    border: 1px solid #666;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    box-sizing: border-box;
+    /* 六行单元格平分整个区域 */
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: 250px;
+    /* 排列方式设置为先列后行 */
+    grid-auto-flow: column;
+    /* 设置隐式网格宽度 */
+    grid-auto-columns: 250px;
+    padding: 20px;
+    /* 初始默认隐藏 */
+    display: none;
+}
+a {
+    text-decoration: none;
+}
+.item .nav a {
+    /* border: 1px solid red; */
+    color: #000;
+    display: flex;
+    /* 垂直方向居中对齐,防止随父元素高度而被拉伸 */
+    align-items: center;
+}
+
+.item .nav a img {
+    margin-right: 10px;
+}
+
+.item .nav a:hover {
+    color: #ff6700;
+}
+
+.item:hover .nav {
+    display: grid;
 }
