--- a/loading.css
+++ b/loading.css
@@ -129,7 +129,7 @@ body {
 }
 
 /* 右侧二级菜单 */
-.menu .item .nav {
+.menu .item .subitem {
     min-width: 250px;
     height: 460px;
     background-color: #fff;
@@ -153,7 +153,7 @@ body {
 a {
     text-decoration: none;
 }
-.item .nav a {
+.item .subitem a {
     /* border: 1px solid red; */
     color: #000;
     display: flex;
@@ -161,14 +161,14 @@ a {
     align-items: center;
 }
 
-.item .nav a img {
+.item .subitem a img {
     margin-right: 10px;
 }
 
-.item .nav a:hover {
+.item .subitem a:hover {
     color: #ff6700;
 }
 
-.item:hover .nav {
+.item:hover .subitem {
     display: grid;
 }
