some failed test on test pages

--- a/loading.css
+++ b/loading.css
@@ -66,6 +66,12 @@ body {
     top: 70px;
     left: 150px;
 }
+.button-buttonsub8{
+    position: absolute;
+    /*on the second row*/
+    top: 970px;
+    left: 320px;
+}
 /*get the form in the centre place*/
 .form{
     position: absolute;
