--- a/loading.css
+++ b/loading.css
@@ -72,6 +72,12 @@ body {
     top: 970px;
     left: 320px;
 }
+.button-buttonsub9{
+    position: absolute;
+    /*on the second row*/
+    top: 70px;
+    left: 460px;
+}
 /*get the form in the centre place*/
 .form{
     position: absolute;
