--- a/loading.css
+++ b/loading.css
@@ -78,6 +78,12 @@ body {
     top: 70px;
     left: 460px;
 }
+.button-buttonsub10{
+    position: absolute;
+    /*on the second row*/
+    top: 70px;
+    left: 300px;
+}
 /*get the form in the centre place*/
 .form{
     position: absolute;
