add one gpt page

--- a/loading.css
+++ b/loading.css
@@ -84,6 +84,12 @@ body {
     top: 70px;
     left: 300px;
 }
+.button-buttonsub11{
+    position: absolute;
+    /*on the second row*/
+    top: 70px;
+    left: 660px;
+}
 /*get the form in the centre place*/
 .form{
     position: absolute;
