--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-	background-color: #E62878;
+	background-color: #38cd85;
 	font-family: "Lucida Grande","Lucida Sans Unicode", Tahoma, Sans-Serif;
   }
   p {
